[package]
name = "sniffnet_copy"
version = "0.1.0"
edition = "2021"
include = [
    "/src/**/*.rs",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    "/README.md",
    "/CHANGELOG.md",
    "/resources/countries_flags/**/*.svg",
    "/resources/DB/*.mmdb",
    "/resources/fonts/subset/*.ttf",
    "/resources/sounds/*.mp3",
    "/services.txt",
    "/build.rs",
]

[dependencies]
pcap = "2.0.0"
etherparse = "0.14.3"
chrono = { version = "0.4.38", default_features = false, features = ["clock"] }
plotters = { version = "0.3.5", default_features = false, features = ["area_series"] }
iced = { version = "0.12.1", features = ["tokio", "svg", "advanced", "lazy"] }
plotters-iced = "0.10.0"
maxminddb = "0.24.0"
confy = "0.6.1"
serde = { version = "1.0.200", default_features = false, features = ["derive"] }
rodio = { version = "0.17.3", default_features = false, features = ["mp3"] }
dns-lookup = "2.0.4"
toml = "0.8.12"
once_cell = "1.19.0"
ctrlc = { version = "3.4.4", features = ["termination"] }
rfd = "0.14.1"
phf = "0.11.2"
phf_shared = "0.11.2"
splines = "4.3.1"

[target.'cfg(not(target_arch = "powerpc64"))'.dependencies]
reqwest = { version = "0.12.4", default-features = false, features = ["json", "blocking", "rustls-tls"] }

[target.'cfg(target_arch = "powerpc64")'.dependencies]
reqwest = { version = "0.12.4", features = ["json", "blocking"] }

#───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

[dev-dependencies]
serde_test = "1.0.176"
rstest = "0.19.0"
serial_test = { version = "3.1.1", default_features = false }

#───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

[build-dependencies]
phf_codegen = "0.11.2"
phf_shared = "0.11.2"
rustrict = { version = "0.7.24", default-features = false, features = ["censor"] }
once_cell = "1.19.0"

[target."cfg(windows)".build-dependencies]
winres = "0.1.12"